--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "connect-mongo": "^1.3.2",
+    "dotenv": "^6.0.0",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "express-session": "^1.15.0",
